z-index to nav  fix

--- a/css/default.css
+++ b/css/default.css
@@ -148,7 +148,7 @@ nav {
   background-color: black;
   width: 15vw;
   height: 100%;
-  z-index: 0;
+  z-index: -3;
   transition: 0.5s;
 }
 .navigator-design.active {
